[gd_scene load_steps=14 format=3 uid="uid://ps7c40br6gw"]

[ext_resource type="Script" uid="uid://nopsbehfna8r" path="res://enemies/enemy.gd" id="1_fw1ev"]
[ext_resource type="Texture2D" uid="uid://c357a0ytcplmo" path="res://enemies/assets/enemy_sheet_red.png" id="2_orwns"]
[ext_resource type="AudioStream" uid="uid://hr14sslgp83p" path="res://effects/pop.wav" id="3_orwns"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a6vjd"]
atlas = ExtResource("2_orwns")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_07tka"]
atlas = ExtResource("2_orwns")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t1x0"]
atlas = ExtResource("2_orwns")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_epsnb"]
atlas = ExtResource("2_orwns")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w5fm"]
atlas = ExtResource("2_orwns")
region = Rect2(16, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_uba7a"]
atlas = ExtResource("2_orwns")
region = Rect2(8, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_28xqf"]
atlas = ExtResource("2_orwns")
region = Rect2(16, 16, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_3t1x0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6vjd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_07tka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t1x0")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_epsnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w5fm")
}],
"loop": true,
"name": &"move_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uba7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28xqf")
}],
"loop": true,
"name": &"move_right",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7frlh"]
radius = 6.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7frlh"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector3(0, -1, 0)
spread = 20.0
initial_velocity_min = 100.0
initial_velocity_max = 175.0
gravity = Vector3(0, 500, 0)
damping_min = 150.0
damping_max = 200.00002
scale_min = 2.0
scale_max = 2.0

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 8
motion_mode = 1
script = ExtResource("1_fw1ev")
max_health = 1

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3t1x0")
animation = &"move_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7frlh")

[node name="HitFlashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DeathParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_7frlh")

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_orwns")
volume_db = 12.0
